# AutoRetouch

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  app.py  config.py  pipeline.py  processor.py  pyproject.toml  requirements-full.txt  requirements.txt  初步概念.txt
docs/: implementation-plan.md  使用文档.md
segmentation/: __init__.py  segmenter.py
tests/: test_processor.py  test_vlm.py
vlm/: __init__.py  agnes_provider.py  base.py  bridge.py  glm_provider.py  ollama_provider.py
