[project]
name = "ai-beautify"
version = "0.1.0"
description = "全自动 AI 修图与调色工作流"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "requests>=2.31",
    "rawpy>=0.19",
    "pillow-heif>=0.16",
    "colour-science>=0.4",
]

[project.optional-dependencies]
# 完整版：包含 SAM2 分割（经 transformers 内置 Sam2Model，无需单独的 segment-anything-2）
# 安装：见 requirements-full.txt（Windows CPU torch 需指定 CPU 索引避免拉 2.5GB CUDA 轮子）
full = [
    "torch>=2.10",
    "torchvision>=0.20",
    "transformers>=5.10",
]

[project.scripts]
ai-beautify = "app:main"
